--- a/movieGraphs/templates/base1.html
+++ b/movieGraphs/templates/base1.html
@@ -53,13 +53,13 @@
                     <span class="stars" style="margin-left: 20px; float:left; line-height: 0px;">{{ ratings }}</span><p style="font-size: 15px; color: #555; line-height:20px">&nbsp;&nbsp;&nbsp;Rating<b>: </b> {{ rat }}/10</p>
                     
                     {% if yaxis == 'Rating' %}
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ an }}'s most rated Movie</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ an }}'s <em>most rated Movie</em></p>
                     {% elif yaxis == 'Release' %}
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ an }}'s most recent Movie</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ an }}'s <em>most recent Movie</em></p>
                     {% elif yaxis == 'Budget' %}
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ an }}'s most budgeted Movie</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ an }}'s <em>most budgeted Movie</em></p>
                     {% else %}
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ an }}'s highest grossing Movie</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;{{ an }}'s <em>highest grossing Movie</em></p>
                     {% endif %}
                     
                     <p style="font-size: 15px; color: #555;">&nbsp;&nbsp;&nbsp;&nbsp;Director<b>: </b> <em>{{ director }}</em></p>
@@ -98,8 +98,8 @@
     
     
        
+        <script type="text/javascript" src="/static/js/jquery-2.1.3.js"></script>
 
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script >
 
             $.fn.stars = function() {
