--- a/movieGraphs/templates/film.html
+++ b/movieGraphs/templates/film.html
@@ -25,9 +25,11 @@
             
             <tr>
                 <td align = "center"><br/>
-                    <input type="submit" name="btnsubmit" value="Plot Graph"/></td>
+                    <input id="add-input" style = "height:30px; width: 100px; font-size: 16px;" name="btnsubmit" type="submit" value="Plot Graph" /></td>
+<!--                    <input type="submit" name="btnsubmit" value="Plot Graph"/></td>-->
                 <td align="center"><br/>
-                    <input type="reset" name="clearr" value="Clear"/>
+                    <input id="add-input" style = "height:30px; width: 60px; font-size: 16px;" name="clearr" type="reset" value="Clear" />
+<!--                    <input type="reset" name="clearr" value="Clear"/>-->
                 </td>
             </tr>
             
